--- a/Scheduler_v8.8a.vbproj
+++ b/Scheduler_v8.8a.vbproj
@@ -102,8 +102,11 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Models\BirthdayModel.vb" />
     <Compile Include="Models\HomeViewModel.vb" />
     <Compile Include="Models\MainViewModel.vb" />
+    <Compile Include="Models\SessionModel.vb" />
+    <Compile Include="Models\TaskModel.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -120,7 +123,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Services\GoogleOAuthService.vb" />
+    <Compile Include="Services\GoogleSheetsDataService.vb" />
+    <Compile Include="Services\IDataService.vb" />
     <Compile Include="Services\SheetDataService.vb" />
+    <Compile Include="Services\UserService.vb" />
     <Compile Include="UserControls\UC_Home.Designer.vb">
       <DependentUpon>UC_Home.vb</DependentUpon>
     </Compile>
