--- a/Scheduler_v8.8a.vbproj
+++ b/Scheduler_v8.8a.vbproj
@@ -104,6 +104,12 @@
     <Compile Include="Forms\AddBeneForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\AddPerForm.Designer.vb">
+      <DependentUpon>AddPerForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AddPerForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -157,6 +163,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Forms\AddBeneForm.resx">
       <DependentUpon>AddBeneForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddPerForm.resx">
+      <DependentUpon>AddPerForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
