კალენდრის გრიდზე არის მცირე პრობლემები ჰორიზონტალურ მაშტაბირებაზე

--- a/Scheduler_v8.8a.vbproj
+++ b/Scheduler_v8.8a.vbproj
@@ -241,6 +241,9 @@
     <Content Include="Resources\AppImages\BtnLeftfast.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\AppImages\BtnMinus.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\AppImages\btnRefresh.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
