--- a/Scheduler_v8.8a.vbproj
+++ b/Scheduler_v8.8a.vbproj
@@ -263,7 +263,13 @@
     <Content Include="Resources\AppImages\BtnMinus.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\AppImages\BtnPDF.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\AppImages\BtnPrint.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\AppImages\BtnPrintGray.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\AppImages\btnRefresh.png">
