განრიგში მუშაობს, მაგრამ ფილტრაცია არის გასაუმჯობესებელი

--- a/Scheduler_v8.8a.vbproj
+++ b/Scheduler_v8.8a.vbproj
@@ -166,6 +166,10 @@
     <Compile Include="Services\GoogleServiceAccountService.vb" />
     <Compile Include="Services\GoogleSheetsDataService.vb" />
     <Compile Include="Services\IDataService.vb" />
+    <Compile Include="Services\ScheduleDataProcessor.vb" />
+    <Compile Include="Services\ScheduleFilterManager.vb" />
+    <Compile Include="Services\ScheduleStatisticsService.vb" />
+    <Compile Include="Services\ScheduleUIManager.vb" />
     <Compile Include="Services\SessionCardFactory.vb" />
     <Compile Include="Services\SheetDataService.vb" />
     <Compile Include="Services\UserService.vb" />
