--- a/Scheduler_v8.8a.vbproj
+++ b/Scheduler_v8.8a.vbproj
@@ -168,6 +168,8 @@
     <Compile Include="Services\IDataService.vb" />
     <Compile Include="Services\ScheduleDataProcessor.vb" />
     <Compile Include="Services\ScheduleFilterManager.vb" />
+    <Compile Include="Services\ScheduleFinancialAnalysisService.vb" />
+    <Compile Include="Services\ScheduleStatisticsDisplayService.vb" />
     <Compile Include="Services\ScheduleStatisticsService.vb" />
     <Compile Include="Services\ScheduleUIManager.vb" />
     <Compile Include="Services\SessionCardFactory.vb" />
