--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="Google.Apis" version="1.69.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.69.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.69.0" targetFramework="net472" />
   <package id="Google.Apis.Oauth2.v2" version="1.68.0.1869" targetFramework="net472" />
   <package id="Google.Apis.Sheets.v4" version="1.69.0.3757" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
   <package id="System.CodeDom" version="9.0.4" targetFramework="net472" />
   <package id="System.Management" version="9.0.4" targetFramework="net472" />
 </packages>
