--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="BouncyCastle.Cryptography" version="2.6.1" targetFramework="net472" />
   <package id="Google.Apis" version="1.69.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.69.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.69.0" targetFramework="net472" />
